# Spotify-Sentiment-Project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
src/cpp/: fast_scanner.cpp
src/spotify_sentiment/core/: config.py
src/spotify_sentiment/pipeline/: base.py  runner.py  steps_analyze.py  steps_download.py  steps_sentiment.py  steps_visualize.py
src/spotify_sentiment/presentation/: cli.py
tests/: test_fast_scanner.py  test_sentiment.py  test_visualizer.py
